# gilbert

./: .gitignore  Cargo.toml  Trunk.toml  create_ca.sh  create_cert.sh
alfred-plugin/: Cargo.toml
alfred-plugin-api/: Cargo.toml
alfred-plugin-api/src/: lib.rs
alfred-plugin/examples/: plugin.rs
alfred-plugin/src/: lib.rs  subscriber.rs
chatter-protocol/: Cargo.toml
chatter-protocol/src/: lib.rs
config/: Cargo.toml
config/examples/: config.example.json  config2.example.json  diff_config.rs  load_config.rs  repo.example.json
config/src/: lib.rs  repo.rs  url_diff.rs
frontend/: index.html
gen-schema/: Cargo.toml
gen-schema/src/: main.rs
gilbert-plugin/: Cargo.toml
gilbert-plugin-api/: Cargo.toml
gilbert-plugin-api/src/: lib.rs  log.rs  plugin_proto.rs  runner_proto.rs
gilbert-plugin/examples/: plugin.rs
gilbert-plugin/src/: lib.rs  plugin.rs  runner.rs  sender.rs  subscriber.rs
gilbert-plugin/src/runner/: job.rs
plugin-manager/: Cargo.toml
plugin-manager/src/: lib.rs
runner/: Cargo.toml  example.job.js  example.job.ts  job.d.ts
runner/examples/: example.job.js  example.job.ts  simple_js.rs  simple_ts.rs
runner/src/: deno_module_loader.rs  lib.rs  main.rs  module_loader.rs  print_ext.rs
schema/: config.schema.json  plugin.schema.json  repo.schema.json
secure-comms/: Cargo.toml
secure-comms/src/: axum_ws.rs  lib.rs  tungstenite.rs
server/: Cargo.toml
server/examples/simple/: config.server1.json  config.server2.json  main.rs
server/src/: api.rs  cache.rs  lib.rs  node_manager.rs
server/src/node_manager/: event_triggers.rs
task-balancer/: Cargo.toml
task-balancer/src/: lib.rs  node.rs  task.rs
task-balancer/tests/: balancing_test.rs
