[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.185", features = ["derive"]}
diff-struct = "0.5.3"
url = {version = "2.4.0", features = ["serde"]}
schemars = {version = "0.8.12", optional=true, features=["url"]}

[dev-dependencies]
serde_json = "1.0.105"

[features]
default = ["schemars"]