[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.188"
serde_json = "^1.0.105"
tokio = "^1.32.0"
semver = "^1.0.18"
tokio-util = {version = "^0.7.8", features = ["codec"]}
futures-util = {version ="^0.3.28", features=["sink"]}
thiserror = "^1.0.47"
gilbert-plugin-api = {path = "../gilbert-plugin-api"}
config = {path = "../config"}
