[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_runtime = "0.123.0"
deno_core = "*"
deno_ast = { version = "0.27.3", features = ["transpiling"] }
thiserror = "1.0.47"
serde_json = "1.0.105"

[dev-dependencies]
tokio = {version ="1.32.0", features = ["macros"]}