[package]
name = "secure-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = "0.24.1"
axum = {version="0.6.20", features = ["ws"]}
tokio-tungstenite = "0.20.0"
serde = "1.0.183"
tokio = "1.31.0"
futures-util = "0.3.28"
pin-project = "1.1.3"